...
        <item>Comics</item>
        <item>Contemporary</item>
        <item>Cookbooks</item>
        <item>Crime</item>
        <item>Ebooks</item>
        <item>Fantasy</item>
        <item>Fiction</item>
        <item>Gay and Lesbian</item>
        <item>Graphic Novels</item>
        <item>Historical Fiction</item>
        <item>History</item>
        <item>Horror</item>
        <item>Humor and Comedy</item>
...
