<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="csci310.plshireus.org.kindler.Login"
              android:background="@color/colorPrimary">

    <!-- Login progress -->
    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView android:layout_width="150dp"
                       android:layout_gravity="center"
                       android:id="@+id/login_logo"
                       android:layout_height="150dp"/>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:textColorHint="@color/defaultText"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/defaultText"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColorHint="@color/defaultText"
                        android:textColor="@color/defaultText"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/email_sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/action_sign_in"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="24dp"/>


            <TextView android:id="@+id/link_signup"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/colorAccent"
                      android:text="@string/title_activity_signup"
                      android:gravity="center"
                      android:textSize="16dip"/>

        </LinearLayout>
    </ScrollView>
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

</LinearLayout>
